[package]
name = "uniqopy"
description = "Create a copy of a file with a unique name (based on timestamp and MD5-hash)."
version = "0.3.1"
edition = "2021"
authors = ["Nathaniel Knight <nathaniel.ep@gmail.com>"]
license-file = "LICENSE.md"
homepage = "https://github.com/nathanielknight/uniqopy"
repository = "https://github.com/nathanielknight/uniqopy"
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.19"
md5 = "0.7.0"
